Created navigation bar for the pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <h1>Alness</h1>
+
+    <nav class="navigation">
+        <ul>
+            <li><a href="index.html">Home Page</a></li>
+            <li><a href="visit.html">Visit</a></li>
+            <li><a href="history.html">History</a></li>
+        </ul>
+
+    </nav>
+
+    <main>
+
+    </main>
+
+
+
 </body>
 <footer>
     
