--- a/history.html
+++ b/history.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>History</h1>
+
+    <nav class="navigation">
+        <ul>
+            <li><a href="index.html">Home Page</a></li>
+            <li><a href="visit.html">Visit</a></li>
+            <li><a href="history.html">History</a></li>
+        </ul>
+    </nav>
 </body>
 <footer>
     
