--- a/visit.html
+++ b/visit.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>Visit</h1>
+
+    <nav class="navigation">
+        <ul>
+            <li><a href="index.html">Home Page</a></li>
+            <li><a href="visit.html">Visit</a></li>
+            <li><a href="history.html">History</a></li>
+        </ul>
+    </nav>
+    
 </body>
 <footer>
     
