--- a/history.html
+++ b/history.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>History</h1>
+    <h1 class="banner">History</h1>
 
     <nav class="navigation">
         <ul>
@@ -16,8 +16,12 @@
             <li><a href="history.html">History</a></li>
         </ul>
     </nav>
+    <main>
+        
+    </main>
+    <footer>
+
+    </footer>
 </body>
-<footer>
-    
-</footer>
+
 </html>
