--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Alness</h1>
+    <h1 class="banner">Alness</h1>
 
     <nav class="navigation">
         <ul>
@@ -15,17 +15,13 @@
             <li><a href="visit.html">Visit</a></li>
             <li><a href="history.html">History</a></li>
         </ul>
-
     </nav>
-
     <main>
-
+        <img src="images/map.png" alt="Map of Alness" class="map">
     </main>
-
-
-
-</body>
-<footer>
+    <footer>
     
-</footer>
+    </footer>
+</body>
+
 </html>
