Fixed the footer issue and also added columns to the visit page

--- a/history.html
+++ b/history.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="banner">History</h1>
+    <main>
+        <h1 class="banner">History</h1>
 
     <nav class="navigation">
         <ul>
             <li><a href="index.html">Home Page</a></li>
             <li><a href="visit.html">Visit</a></li>
-            <li><a href="history.html">History</a></li>
+            <li><a href="history.html" style="color: grey;">History</a></li>
         </ul>
     </nav>
-    <main>
         
     </main>
     <footer>
