--- a/index.html
+++ b/index.html
@@ -8,26 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <main>
         <h1 class="banner">Alness</h1>
 
         <nav class="navigation">
             <ul>
-                <li><a href="index.html">Home Page</a></li>
+                <li><a href="index.html" style="color: grey;">Home Page</a></li>
                 <li><a href="visit.html">Visit</a></li>
                 <li><a href="history.html">History</a></li>
             </ul>
         </nav>
         <br><br> <!-- This isn't working -->
         <img src="images/map.png" alt="Map of Alness" class="map">
-
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In accusantium unde minus est sint veritatis quod a, quibusdam cum et ex libero eos praesentium at porro harum ab repellat ullam?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque unde tenetur consequuntur culpa accusamus vel possimus modi illo odit fuga optio ipsa asperiores qui, illum non a, corporis iusto. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, aperiam! Cupiditate saepe dignissimos culpa reiciendis quo error, mollitia quae laudantium quas veritatis eos iste repellat corporis? Odit et facilis commodi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. A officiis quis nisi necessitatibus quidem quaerat vitae explicabo voluptate deleniti aliquid. Et, aliquam possimus. Eveniet ratione sequi eos doloribus incidunt dolores! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex explicabo deleniti quaerat perferendis, vero qui labore quisquam. Est mollitia magnam quam, dolorum quasi rem dolorem unde fugiat, voluptates nesciunt quaerat.</p>
+        
     </main>
     <footer>
-        <p>test text for footer</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat quasi excepturi eius hic, deleniti reprehenderit quis unde doloribus illum odit optio cupiditate amet nulla natus commodi iusto facere corrupti. Commodi?</p>
+        <p>footer info</p>
     </footer>
 </body>
 
