--- a/visit.html
+++ b/visit.html
@@ -8,20 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="banner">Visit</h1>
-
-    <nav class="navigation">
-        <ul>
-            <li><a href="index.html">Home Page</a></li>
-            <li><a href="visit.html">Visit</a></li>
-            <li><a href="history.html">History</a></li>
-        </ul>
-    </nav>
     <main>
-        
+        <h1 class="banner">Visit</h1>
+        <nav class="navigation">
+            <ul>
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="visit.html" style="color: grey;">Visit</a></li>
+                <li><a href="history.html">History</a></li>
+            </ul>
+        </nav>
+        <div class="left-column">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem facere beatae inventore reprehenderit accusamus maiores ullam minus facilis quaerat quod culpa molestiae corporis ipsam temporibus dicta magnam, rerum commodi magni. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et sequi accusamus pariatur dolorem nobis odit distinctio soluta velit accusantium earum! Perspiciatis laudantium at consequuntur nostrum rem officia dolore, voluptate sapiente?</p>
+        </div>
+        <div class="right-column">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem facere beatae inventore reprehenderit accusamus maiores ullam minus facilis quaerat quod culpa molestiae corporis ipsam temporibus dicta magnam, rerum commodi magni. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et sequi accusamus pariatur dolorem nobis odit distinctio soluta velit accusantium earum! Perspiciatis laudantium at consequuntur nostrum rem officia dolore, voluptate sapiente?</p>
+        </div>
     </main>
     <footer>
-
+        <p>footer info</p>
     </footer>
 </body>
 
