More changes -- will need to update formatting for index.html next time. Image doesn't format correctly if screen too small such as that on mobile

--- a/history.html
+++ b/history.html
@@ -18,10 +18,11 @@
             <li><a href="history.html" style="color: grey;">History</a></li>
         </ul>
     </nav>
-        
+    <br><br>
+    <p>Alness's history can be traced back to the late 17th century, starting off as a modest port town on the Cromarty Firth</p>
     </main>
     <footer>
-
+        <p>Sources | <a href="https://www.undiscoveredscotland.co.uk/alness/alness/index.html">Undiscovered Scotland</a>, <a href="https://en.wikipedia.org/wiki/Alness#History">Wikipedia</a></p>
     </footer>
 </body>
 
