--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             </ul>
         </nav>
         <br><br> <!-- This isn't working -->
+        <h2>Welcome to Alness!</h2>
         <img src="images/map.png" alt="Map of Alness" class="map">
         
     </main>
     <footer>
-        <p>footer info</p>
+        <p>Source for map | <a href="https://www.openstreetmap.org" target="_blank">Open Street Map</a></p>
     </footer>
 </body>
 
