Added information to various pages and some images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
         </nav>
         <br><br> <!-- This isn't working -->
         <h2>Welcome to Alness!</h2>
-        <img src="images/map.png" alt="Map of Alness" class="map">
+        <p>Alness, located on the east coast of Scotland, in the Highlands, is the home for some 6,000 people. Just over 20 miles from Inverness, the capital city of the Highlands, and 4 miles from Invergordon, a port town that regularly accommodates cruise ships docking there, Alness offers a quality escape while still having the comfort of nature and urban life at your finger tips.</p>
+        <div class="left-column">
+            <h3>Travel</h3>
+            <p>Transport is frequent to and from Alness. Coming from Inverness; buses are frequent coming every 30 minutes or so. There are also frequent taxi services from the city centre that can take you to Alness, or to explore the surrounding area such as Loch Ness.</p>
+            <p>Inverness, being the main hub to the Highlands, is home to an airport allowing people from all over the globe to come and visit the wildlife of the Highlands. Whether you are travelling from London, England or London, Canada, the airport likely has you covered for all your travel needs in the air.</p>
+        </div>
+        <div class="right-column">
+            <img src="images/map.png" alt="Map of Alness" class="map">
+        </div>
+
         
     </main>
     <footer>
