--- a/visit.html
+++ b/visit.html
@@ -19,14 +19,15 @@
         </nav>
         <br><br>
         <div class="left-column">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem facere beatae inventore reprehenderit accusamus maiores ullam minus facilis quaerat quod culpa molestiae corporis ipsam temporibus dicta magnam, rerum commodi magni. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et sequi accusamus pariatur dolorem nobis odit distinctio soluta velit accusantium earum! Perspiciatis laudantium at consequuntur nostrum rem officia dolore, voluptate sapiente?</p>
+            <h3>Fyrish</h3>
+            <p></p>
         </div>
         <div class="right-column">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem facere beatae inventore reprehenderit accusamus maiores ullam minus facilis quaerat quod culpa molestiae corporis ipsam temporibus dicta magnam, rerum commodi magni. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et sequi accusamus pariatur dolorem nobis odit distinctio soluta velit accusantium earum! Perspiciatis laudantium at consequuntur nostrum rem officia dolore, voluptate sapiente?</p>
+            <img src="images/fyrish.JPG" alt="Fyrish Monument">
         </div>
     </main>
     <footer>
-        <p>footer info</p>
+        <p>Fyrish Image Source | <a href="https://www.walkhighlands.co.uk/ullapool/fyrish-monument.shtml" target="_blank">WalkHighlands</a></p>
     </footer>
 </body>
 
