--- a/history.html
+++ b/history.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> <!-- Bootstrap link-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> <!--Bootstrap link-->
     <title>History</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> 
 </head>
 <body>
     <main>
@@ -19,10 +22,15 @@
         </ul>
     </nav>
     <br><br>
-    <p>Alness's history can be traced back to the late 17th century, starting off as a modest port town on the Cromarty Firth</p>
+    <p>Alness's history can be traced back to the late 17th century, starting off as a modest port town on the Cromarty Firth, it is home to around 6,000 people today. However the name 'Alness' or <i>Alenes</i> has been used since the 13th centry, but was likely just a small crofting settlement next to the Averon River.</p>
+    <p>Alness was originally 2 seperate towns, seperated by the Averon River. The river that runs through the centre of Alness today and into the Cromarty Firth. As the local industries took off and the town expanded the two towns merged into one. The main industries in Alness include the local whiskey distillery and the oil industry. In the past the forestry industry was big but in recent years it has become unsustainable economically and all that is left are remnents.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <img src="images/alness.jpg" alt="photo looking down Alness highstreet" style="max-width: 500px;" class="centre">
+    <p>In more recent years the highstreet has continued to thrive with local small businesses opening over the decades. Annually there is a Christmas Market on the highstreet for local vendors to sell their craft, and an annual gala as of 2023 which has people coming from neighbouring towns such as Invergordon and Dingwall to attend.</p>
+    <p>During World War II Alness had an RAF base situated on the coast of the Cromarty Firth. The field in which it was situated can be walked to through the Averon River park, however it is not recommended to walk into the field as there may still be unexploaded landmines!</p>
     </main>
     <footer>
-        <p>Sources | <a href="https://www.undiscoveredscotland.co.uk/alness/alness/index.html">Undiscovered Scotland</a>, <a href="https://en.wikipedia.org/wiki/Alness#History">Wikipedia</a></p>
+        <p>Sources | <a href="https://www.undiscoveredscotland.co.uk/alness/alness/index.html">Undiscovered Scotland</a>, <a href="https://en.wikipedia.org/wiki/Alness#History">Wikipedia</a>, <a href="https://www.rossandcromartyheritage.org/home/easter-ross-communities/alness/alness-history/alness-development/" target="_blank">Ross and Cromarty Heritage</a></p>
     </footer>
 </body>
 
