--- a/visit.html
+++ b/visit.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> <!-- Bootstrap link-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> <!--Bootstrap link-->
     <title>Visit</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> 
 </head>
 <body>
     <main>
@@ -18,16 +21,69 @@
             </ul>
         </nav>
         <br><br>
-        <div class="left-column">
-            <h3>Fyrish</h3>
-            <p></p>
-        </div>
-        <div class="right-column">
-            <img src="images/fyrish.JPG" alt="Fyrish Monument">
-        </div>
+
+        <!--The following sections need to be laid out like this to accommodate smaller screens. If screen is too small it will default to displaying the right column below the second, instead of beside it-->
+        <section>
+            <div class="left-column">
+                <h3>Fyrish</h3>
+                <p>Fyrish Monument; built in 1782 to assist in the local population of the time in making some money after scares of being cleared off their land. The walk up to the monument provides a pleasant day out for everyone, no matter the fitness level of those involved. Taking roughly one hour to reach the top, you are rewarded with views across the Cromarty Firth and a beautful monument at the top made from the local geology. In total the walk from the carpark is around 2 hours from start to finish.</p>
+                <p>Travelling to Fyrish is no issue. Coming by car allows you to park in a carpark at the foot of the hill near Boath, from there there is a path headed into the woods that takes you to the monument. By bus or train is a slightly longer walk but easily doable. It is recommended you enter through Coulhill woods if coming from the town.</p>
+                <p>The difficulty of the walk is largely dependent on how experienced you are at hiking. Everyone will be able to ascend the hill with relative ease however at parts the sloap gets very steep, so experienced hikers may find some sections easier than others. On the way up to the monument you will likely pass a small lake overlooking the A9 and Cromarty Firth, depending on which direction you decide to come from.</p>
+
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Further Reading</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="https://en.wikipedia.org/wiki/Fyrish" target="_blank">Wikipedia</a>
+                        <a class="dropdown-item" href="https://www.walkhighlands.co.uk/ullapool/fyrish-monument.shtml" target="_blank">WalkHighlands Website</a>
+                        <a class="dropdown-item" href="https://www.pressandjournal.co.uk/fp/news/highlands-islands/6492953/eight-must-visit-attractions-near-inverness/" target="_blank">Article by Press and Journal</a>
+                    </div>
+                </div>
+            </div>
+            <div class="right-column">
+                <img src="images/fyrish.JPG" alt="Fyrish Monument">
+            </div>
+        </section>
+        <br>
+        <section>
+            <div class="left-column">
+                <h3>Heritage Centre</h3>
+                <p>Located at 102 Highstreet, Alness, the Heritage Centre is the heart for the history of Alness. Opened in 2009, the Heritage Centre provides the local and humble town of Alness with information about the place, largely in museum form as well as written documentation from over the decades. Alness, being the location of an RAF base during World War II has a lot of history. For more information on the history of Alness check out our History page.</p>
+                <p>The Heritage Centre has free access to it as is run mostly on donations from the public visiting it. There is a small gift shop selling souveniers from fridge magnets to coasters. There is also a small public garden that is owned by the Heritage Centre, with a few old industrial tractors and equipment and a very nice bench and flowers to sit and relax while listening to nature.</p>
+
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Further Reading</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="http://www.alness.com/heritage-centre" target="_blank">Heritage Centre Website</a>
+                        <a class="dropdown-item" href="https://en.wikipedia.org/wiki/Alness" target="_blank">Alness Wikipedia</a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="right-column">
+                <img src="images/heritage_centre.jpg" alt="Heritage Centre">
+            </div>
+        </section>
+        <br>
+        <section>
+            <div class="left-column">
+                <h3>Averon River Park</h3>
+                <p>Averon River Park, colloquially known as <i>Crawl Park</i>, is the biggest and main park in Alness. The path follows the River Averon which flows into the Cromarty Firth. Along the way you will pass 2 playparks for children and a large field, used to hold an annual Gala and various other events, as well as being a popular spot for group sports.</p>
+                <p>Continue walking down the path and you will eventually come to the pier jutting out into the sea. You can walk to the end of the pier and at the end is a small, abandoned building, likely a tower of sorts but it is not known what it's intended use was.</p>
+
+                <div>
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Further Reading</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="https://www.walkhighlands.co.uk/ullapool/river-averon.shtml" target="_blank">WalkHighlands</a>
+                    </div>
+                </div>
+            </div>
+            <div class="right-column">
+                <img src="images/crawl-park.jpg" alt="Crawl Park Gala 2024">
+            </div>
+        </section>
     </main>
     <footer>
-        <p>Fyrish Image Source | <a href="https://www.walkhighlands.co.uk/ullapool/fyrish-monument.shtml" target="_blank">WalkHighlands</a></p>
+        <p>Fyrish Image Sources | <a href="https://www.walkhighlands.co.uk/ullapool/fyrish-monument.shtml" target="_blank">WalkHighlands</a>, <a href="https://commons.wikimedia.org/wiki/File:Fyrish_Monument_snow.jpg" target="_blank">Wikimedia</a><br>Heritage Centre Image Sources | <a href="http://www.alness.com/alness-heritage-centre" target="_blank">Alness.com</a></p>
     </footer>
 </body>
 
