Final Commit before handing in, fixed a few bugs and ended the readme.md page

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <img src="images/map.png" alt="Map of Alness" class="map">
         </div>
         <!--For some reason this doesn't display correctly. No idea why-->
-        <!--Fixed it but have no idea why this works now.-->
+        <!--Fixed it.-->
         <p>For more information please consult local bus and train times</p>
         <br>
         <section>
             <h3>Accommodation</h3>
-            <p>Alness is home to the Station Hotel which is a quality bed and breakfast right at the heart of the highstreet for low costs. Also offering a restaurant and bar with a plethora of desserts to choose from.</p>
+            <p>Alness is home to the Station Hotel which is a quality bed and breakfast right at the heart of the highstreet for low costs. Also offering a restaurant and bar with a plethora of desserts to choose from. Tables are also able to be booked in advance should you like to catch up with family while visiting Alness, or just to ensure a spot for dinner.</p>
             <p>More information can be found on their website <a href="https://stationhotelalness.com/" target="_blank">here</a></p>
         </section>
         
