--- a/visit.html
+++ b/visit.html
@@ -31,8 +31,8 @@
                 <p>The difficulty of the walk is largely dependent on how experienced you are at hiking. Everyone will be able to ascend the hill with relative ease however at parts the sloap gets very steep, so experienced hikers may find some sections easier than others. On the way up to the monument you will likely pass a small lake overlooking the A9 and Cromarty Firth, depending on which direction you decide to come from.</p>
 
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Further Reading</button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Further Reading</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                         <a class="dropdown-item" href="https://en.wikipedia.org/wiki/Fyrish" target="_blank">Wikipedia</a>
                         <a class="dropdown-item" href="https://www.walkhighlands.co.uk/ullapool/fyrish-monument.shtml" target="_blank">WalkHighlands Website</a>
                         <a class="dropdown-item" href="https://www.pressandjournal.co.uk/fp/news/highlands-islands/6492953/eight-must-visit-attractions-near-inverness/" target="_blank">Article by Press and Journal</a>
@@ -51,8 +51,8 @@
                 <p>The Heritage Centre has free access to it as is run mostly on donations from the public visiting it. There is a small gift shop selling souveniers from fridge magnets to coasters. There is also a small public garden that is owned by the Heritage Centre, with a few old industrial tractors and equipment and a very nice bench and flowers to sit and relax while listening to nature.</p>
 
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Further Reading</button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Further Reading</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                         <a class="dropdown-item" href="http://www.alness.com/heritage-centre" target="_blank">Heritage Centre Website</a>
                         <a class="dropdown-item" href="https://en.wikipedia.org/wiki/Alness" target="_blank">Alness Wikipedia</a>
                     </div>
@@ -71,8 +71,8 @@
                 <p>Continue walking down the path and you will eventually come to the pier jutting out into the sea. You can walk to the end of the pier and at the end is a small, abandoned building, likely a tower of sorts but it is not known what it's intended use was.</p>
 
                 <div>
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Further Reading</button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Further Reading</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
                         <a class="dropdown-item" href="https://www.walkhighlands.co.uk/ullapool/river-averon.shtml" target="_blank">WalkHighlands</a>
                     </div>
                 </div>
